--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -69,21 +69,21 @@
 }
 </style>
 <p>
-  <strong>Theme:</strong>
+  <strong><%= t('site.theme') %>:</strong>
   <%= @site.theme %>
 </p>
 
 <p>
-  <strong>Menu type:</strong>
+  <strong><%= t('site.menutype') %>:</strong>
   <%= @site.menu_type %>
 </p>
 
 <p>
-  <strong>Title:</strong>
+  <strong><%= t('site.title') %>:</strong>
   <%= @site.title %>
 </p>
  <p>
-  <strong>Description:</strong>
+  <strong><%= t('site.description') %>:</strong>
   <%= @site.description %>
 </p>
 
