--- a/app/views/template/_horizontal.html.erb
+++ b/app/views/template/_horizontal.html.erb
@@ -17,7 +17,7 @@
       </ul>
       <% if action_name == "show" %>
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "Back", root_path %> </a></li>        
+          <li><%= link_to "Back", root_path %></li>
         </ul>
       <% end %> 
     </div>
