--- a/app/assets/javascripts/pages.js.erb
+++ b/app/assets/javascripts/pages.js.erb
@@ -68,9 +68,9 @@ function initializeSortable(){
 	    emptytext   : function() {
 	    	var parent = $(this).parent(); 
 	    	if (parent.data("type") == "video") {
-	    		return "Enter video url";
+	    		return "<%= I18n.t('page.enter.video') %> URL";
 	    	} else if (parent.data("type") == "markdown_text") {
-	    		return "Enter text";
+	    		return "<%= I18n.t('page.enter.text') %>";
 	    	}
 	    	return parent.data("type");
 	    },
@@ -105,7 +105,7 @@ function showDraggedElement(elem, type) {
 	}
 
 	var innerTag = $('<div>').addClass('edit_area')
-	innerTag.attr("title", "Click to edit")
+	innerTag.attr("title", "<%= I18n.t('page.clickToEdit') %>")
 	//innerTag.text("New " + type)
 	var res = $('<div>').addClass('edit-class').append("<button class='close'>X</button>").append(innerTag);
 	if (type == "text-btn") {
