--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,76 +1,70 @@
-<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 <style type="text/css">
 
 </style>
 <div class="panel panel-default">
   <div class="panel-heading">
-  	<div class="btn-toolbar">
-  <div class="btn-group">
-      <button class="btn btn-default" id="picture-btn" data-original-title="Drag picture" 
-   data-placement="bottom" rel="popover"><i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
-	     
-	       	</button>
-      <button class="btn draggable btn-default" id="video-btn"><i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></button>
-	      	<button class="btn draggable btn-default" id="text-btn"><i class="fa fa-font fa-2x" aria-hidden="true"></i></button>
-	      	<button class="btn btn-default" id="add-page" data-toggle="modal" data-target="#newPageDialog"> <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
-</button>
-	      	<button class="btn btn-default" id="save"><i class="fa fa-floppy-o fa-2x" aria-hidden="true"></i></button>
-  </div>
- 
-</div>
+    <div class="btn-toolbar">
+      <div class="btn-group">
+        <button class="btn btn-default" id="picture-btn" data-original-title="<%= t('editor.dragPicture') %>"
+            data-placement="bottom" rel="popover"><i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
+        </button>
+        <button class="btn draggable btn-default" id="video-btn"><i class="fa fa-youtube-play fa-2x" aria-hidden="true"></i></button>
+        <button class="btn draggable btn-default" id="text-btn"><i class="fa fa-font fa-2x" aria-hidden="true"></i></button>
+        <button class="btn btn-default" id="add-page" data-toggle="modal" data-target="#newPageDialog"> <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+        </button>
+        <button class="btn btn-default" id="save"><i class="fa fa-floppy-o fa-2x" aria-hidden="true"></i></button>
+      </div>
+    </div>
   </div>
   <div class="panel-body height-row editor-panel"><%= render "page", locals: {action: "edit"} %></div>
 </div>
 
 
 <div class="modal fade" id="newPageDialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h4 class="modal-title" id="exampleModalLabel">New Page</h4>
-        </div>
-        <div class="modal-body">
-          <%= render "form" %>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Send message</button>
-        </div>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title" id="exampleModalLabel"><%= t('editor.newPage') %></h4>
+      </div>
+      <div class="modal-body">
+        <%= render "form" %>
       </div>
     </div>
   </div>
+</div>
 
 <script type="text/javascript">
-$(document).ready(function() {
-	initializeEditable();
-	initializeSortable();
-	initializeCloseButon();
-		
-});
-	$('#picture-btn')
-	   .popover({trigger: "click", html:true, content: function () {
-	        return $('<div>').html('<%= escape_javascript(render "pictures") %>');
+  $(document).ready(function() {
+    initializeEditable();
+    initializeSortable();
+    initializeCloseButon();
 
-	      }})
-	   .click(function(e) { 
-	       e.preventDefault(); 
-	       initializeSortable();
-	       $(this).focus(); 
-	   });
+  });
+  $('#picture-btn')
+      .popover({trigger: "click", html:true, content: function () {
+        return $('<div>').html('<%= escape_javascript(render "pictures") %>');
 
-	   $("#save").click(function() {
-	        updateWidgetData();
-   }); 
+      }})
+      .click(function(e) {
+        e.preventDefault();
+        initializeSortable();
+        $(this).focus();
+      });
 
-     $(document).ready(function() {
-  initializeEditable();
-  initializeSortable();
-  initializeCloseButon();
-    
-});
+  $("#save").click(function() {
+    updateWidgetData();
+  });
+
+  $(document).ready(function() {
+    initializeEditable();
+    initializeSortable();
+    initializeCloseButon();
+
+  });
 </script>
 
 
