--- a/app/views/sites/_sites.html.erb
+++ b/app/views/sites/_sites.html.erb
@@ -1,56 +1,54 @@
 <style type="text/css">
-  .dropdown-actions { 
+  .dropdown-actions {
     display: none;
     float:left;
     padding: 0;
   }
   .btn-dropdown{
-    //padding: 0;
+  //padding: 0;
     border: none;
     background: #e6e6e6;
 
   }
 </style>
 <% if can? :create, Site %>
-<%= link_to 'New Site', new_site_path, class:"btn btn-default" %>
+    <%= link_to t('site.new'), new_site_path, class:"btn btn-default" %>
 <% end %>
 <table class="table table-hover" id="sites-table">
   <thead>
-    <tr>
-      <th>Title</th>
-      <th>Logo</th>
-      <th>User name</th>
-    </tr>
+  <tr>
+    <th><%= t('site.title') %></th>
+    <th><%= t('site.logo') %></th>
+    <th><%= t('site.userName') %></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @sites.each do |site| %>
+  <% @sites.each do |site| %>
       <tr>
-
-        
         <td>
           <div class="dropdown dropdown-actions">
             <button class="btn dropdown-toggle btn-dropdown" type="button" data-toggle="dropdown">
-            <i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
+              <i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
             <ul class="dropdown-menu">
               <li>
                 <% if can? :read, site %>
-                <%= link_to 'Description', site_path(site) %>
+                    <%= link_to t('site.dropdown.description'), site_path(site) %>
                 <% end %>
               </li>
               <li>
                 <% if can? :read, site.pages.first %>
-                  <%= link_to 'Show', site_page_path(site, site.first_page) %>
+                    <%= link_to t('site.dropdown.show'), site_page_path(site, site.first_page) %>
                 <% end %>
               </li>
               <li>
                 <% if can? :update, site %>
-                  <%= link_to 'Edit', edit_site_page_path(site, site.first_page) %>
+                    <%= link_to t('site.dropdown.edit'), edit_site_page_path(site, site.first_page) %>
                 <% end %>
               </li>
               <li>
                 <% if can? :destroy, site %>
-                  <%= link_to 'Delete', site_path(site), method: :delete %>
+                    <%= link_to t('site.dropdown.delete'), site_path(site), method: :delete %>
                 <% end %>
               </li>
             </ul>
@@ -59,9 +57,9 @@
         </td>
         <td><%= site.picture.to_html("show").html_safe %></td>
         <td><p><%= site.user.name%></p></td>
-        <td><p><%= site.created_at %></p></td>
+        <td><p><%= l site.created_at, format: :long %></p></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 <%= will_paginate @sites %>
@@ -70,17 +68,17 @@
 
 <script type="text/javascript">
   $('#sites-table tbody tr').hover(function() {
-      $(this).find(".dropdown").show();
+    $(this).find(".dropdown").show();
   }, function() {
-      
-      $(this).find(".btn-dropdown").css("background", "#e6e6e6");
-      $(this).find("div.dropdown").removeClass('open')
-      $(this).find(".dropdown").hide();
+
+    $(this).find(".btn-dropdown").css("background", "#e6e6e6");
+    $(this).find("div.dropdown").removeClass('open')
+    $(this).find(".dropdown").hide();
   });
 
   $('.btn-dropdown').click(function() {
-  $(this).css("background", "#cccccc");
-});
+    $(this).css("background", "#cccccc");
+  });
 
 
 </script>
