--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<div class="panel panel-default text-left">
-		  <div class="panel-heading">New Site</div>
+		  <div class="panel-heading"><%= t('site.new') %></div>
 		  <div class="panel-body">
 		  	<%= render 'form' %>
 		  </div>
