--- a/app/views/template/_horizontal.html.erb
+++ b/app/views/template/_horizontal.html.erb
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-default <%= @site.theme %>">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#horizontalNavbar">
+       <a class="navbar-brand" href="" style="padding: 0px;"><img  style="height: 100%; margin:0 10px; width: auto; display:inline;" src="<%= @site.picture.url %>">
+        <%= @site.title %></a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#horizontalNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span> 
       </button>
-       <a class="navbar-brand" href="" style="padding: 0px;"><img  style="height: 100%; padding: 2px; width: auto;" src="<%= @site.picture.url %>">
-        <%= @site.title %></a>
     </div>
     <div class="collapse navbar-collapse" id="horizontalNavbar">
       <ul class="nav navbar-nav">
