--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -5,8 +5,8 @@
 <script type="text/javascript">
 
   var word_array = [
-    <% Site.tag_counts_on(:hashtags).each do |hashtag| %>
-    {text: "<%= hashtag.name %>", weight: <%= hashtag.taggings_count %>, link: "<%= search_path(:tag => hashtag.name) %>" },
+    <% Site.tag_counts.each do |tag| %>
+    {text: "<%= tag.name %>", weight: <%= tag.taggings_count %>, link: "<%= search_path(:tag => tag.name) %>" },
     <% end %>
   ];
 
