--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -68,23 +68,59 @@
     padding:10px;
 }
 </style>
-<p>
-  <strong>Theme:</strong>
-  <%= @site.theme %>
-</p>
+<div class="col-sm-8">
+ <!-- the actual blog post: title/author/date/content -->
+ <div class="row">
+  <div class="col-xs-6">
+                <h1><%= link_to @site.title, site_page_path(@site, @site.first_page) %></h1>
+                <p class="lead"><i class="fa fa-user"></i> by <%= @site.user.name %></p>
+                </div>
+                <div class="col-xs-6">
+                 <%= image_tag @site.picture.url, class:"img-responsive img-thumbnail", style:"height:100px;float:right;"%> 
+                 </div>
+                </div>
+                <hr>
+                <p><i class="fa fa-calendar"></i> Posted on <%= I18n.l (@site.created_at) %></p>
+        <p><i class="fa fa-tags"></i> Tags: 
+          <% @site.tag_list.each do |tag| %>
+          <%= link_to search_path(:tag => tag.name) do %><span class="badge badge-info"><%= tag %></span>
+          <% end %> 
+          <% end %>
+        </p>
+          
+                <hr>
+                   <p class="lead" > <strong>Description</br></br></strong><%= @site.description %></p>
+                
+                <br/>
 
-<p>
-  <strong>Menu type:</strong>
-  <%= @site.menu_type %>
-</p>
+                   <hr>
+                <!-- the comment box -->
+                <div class="well">
+                    <h4><i class="fa fa-paper-plane-o"></i> Leave a Comment:</h4>
+                    <form role="form">
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-reply"></i> Submit</button>
+                    </form>
+                </div>
+                  <hr>
 
-<p>
-  <strong>Title:</strong>
-  <%= @site.title %>
-</p>
- <p>
-  <strong>Description:</strong>
-  <%= @site.description %>
-</p>
+                <!-- the comments -->
+                <h3><i class="fa fa-comment"></i> User One says:
+                    <small> 9:41 PM on August 24, 2014</small>
+                </h3>
+                <p>Excellent post! Thank You the great article, it was useful!</p>
 
- <%= render partial: "comments/comments", locals: { site: @site } %>
+                <h3><i class="fa fa-comment"></i> User Two says:
+                    <small> 9:47 PM on August 24, 2014</small>
+                </h3>
+                <p>Excellent post! Thank You the great article, it was useful!</p>
+
+            </div>
+<div class="col-sm-4">
+  <%= render "sidebar" %>
+    
+</div>
+<!-- 
+ <%= render partial: "comments/comments", locals: { site: @site } %> -->
