--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,4 +1,5 @@
-
+<script src="assets/js/bootstrap-tag-cloud.js"></script>
+<link href="assets/css/bootstrap-tag-cloud.css" rel="stylesheet">
 <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 <link rel="stylesheet" href="jquery-ui.theme.css">
 <%= stylesheet_link_tag 'jquery-ui.theme.css'%>
@@ -51,8 +52,12 @@
           <%= ff.hidden_field :url %>
           <%= ff.hidden_field :public_id %>
         </div>
-        <%= f.autocomplete_field :tag_list, autocomplete_tag_name_sites_path,
-                                 'data-delimiter' => ' ', :multiple => true %>
+        <div id="tag-info" class="input-append">
+          <%= f.autocomplete_field :tag_list, autocomplete_tag_name_sites_path,
+                                   'data-delimiter' => ' ', :multiple => true %>
+          <button class="btn" type="button">Add <i class="icon-plus"></i></button>
+        </div>
+        <ul id="tag-cloud"></ul>
     <% end %>
 
     <div class="actions">
