--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -11,9 +11,8 @@
   ];
 
   $(function() {
-    // When DOM is ready, select the container element and call the jQCloud method, passing the array of words as the first argument.
-    $("#example").jQCloud(word_array, {});
+    $("#tag-cloud").jQCloud(word_array, {});
   });
 </script>
-<div id="example" style="width: 550px; height: 350px; color: black;"></div>
+<div id="tag-cloud" style="width: 550px; height: 350px; color: black;"></div>
 <%= render "sites" %>
