--- a/app/views/sites/_sidebar.html.erb
+++ b/app/views/sites/_sidebar.html.erb
@@ -1,40 +1,33 @@
+<link rel="stylesheet" type="text/css" href="jqcloud.css" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+<%= javascript_include_tag('jqcloud.js') %>
+
 <div class="well">
-                    <h4><i class="fa fa-tags"></i>Tags:</h4>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href=""><span class="badge badge-info">Windows 8</span></a>
-                                </li>
-                                 <li><a href=""><span class="badge badge-info">C#</span></a>
-                                </li>
-                                 <li><a href=""><span class="badge badge-info">Windows Forms</span></a>
-                                </li>
-                                 <li><a href=""><span class="badge badge-info">WPF</span></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled">
-                                <li><a href=""><span class="badge badge-info">Bootstrap</span></a>
-                                </li>
-                                 <li><a href=""><span class="badge badge-info">Joomla!</span></a>
-                                </li>
-                                 <li><a href=""><span class="badge badge-info">CMS</span></a>
-                                </li>
-                                 <li><a href=""><span class="badge badge-info">Java</span></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
- <div class="well">
-                    <h4><i class="fa fa-fire"></i> Recent sites:</h4>
-          <ul>
-                    <li><a href="">WPF vs. Windows Forms-Which is better?</a></li>
-          <li><a href="">How to create responsive website with Bootstrap?</a></li>
-          <li><a href="">The best Joomla! templates 2014</a></li>
-          <li><a href="">ASP .NET cms list</a></li>
-              <li><a href="">C# Hello, World! program</a></li>
-          <li><a href="">Java random generator</a></li>
-          </ul>
-                </div>
+  <h4><i class="fa fa-tags"></i>Tags:</h4>
+  <div class="row">
+    <script type="text/javascript">
+
+      var word_array = [
+        <% Site.tag_counts.each do |tag| %>
+        {text: "<%= tag.name %>", weight: <%= tag.taggings_count %>, link: "<%= search_path(:tag => tag.name) %>" },
+        <% end %>
+      ];
+
+      $(function() {
+        $("#tag-cloud").jQCloud(word_array, {});
+      });
+    </script>
+    <div id="tag-cloud" style="height: 350px; color: black;"></div>
+  </div>
+</div>
+<div class="well">
+  <h4><i class="fa fa-fire"></i> Recent sites:</h4>
+  <ul>
+    <li><a href="">WPF vs. Windows Forms-Which is better?</a></li>
+    <li><a href="">How to create responsive website with Bootstrap?</a></li>
+    <li><a href="">The best Joomla! templates 2014</a></li>
+    <li><a href="">ASP .NET cms list</a></li>
+    <li><a href="">C# Hello, World! program</a></li>
+    <li><a href="">Java random generator</a></li>
+  </ul>
+</div>
