sunspot bux fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,12 +89,14 @@
 <div class="container-fluid text-left">
   <div class="row content">
     <div class="col-sm-12">
-       <% unless notice.nil? %>
+       <!-- <% unless notice.nil? %>
           <div class="alert alert-success fade in">
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
             <strong><%= notice %></strong>
           </div>
       <% end %>
+###It's unneccesary information
+-->
       <% unless alert.nil? %>
           <div class="alert alert-danger fade in">
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
