Refactor site page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,8 @@
 @import "jquery-ui";
 @import "editable/bootstrap-editable";
 @import "jqcloud";
+@import "jquery-ui.theme";
+
 
 html {
   position: relative;
